--- a/aboutme.html
+++ b/aboutme.html
@@ -26,8 +26,8 @@
 	</p>
 	<h3>Contact Info</h3>
 	<ul>
-		<li>Email: <a href="hajar.zemzem@gmail.com"></li>
-		<li>Github: <a href="https://github.com/hzemzem"></li>
+		<li>Email: <a href="#">hajar.zemzem@gmail.com</a></li>
+		<li>Github: <a href="#"">https://github.com/hzemzem</a></li>
 	</ul>
 </body>
 </html>
